--- a/lecture1.tex
+++ b/lecture1.tex
@@ -10,6 +10,8 @@
 \hypersetup{colorlinks=true}
 \usepackage{tikz}
 \usetikzlibrary{fit}
+\usepackage{pgfplots}
+\pgfplotsset{compat=newest}
 
 \def \MinSize {22}
 
@@ -135,8 +137,24 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{\secname : \subsecname}
+  \framesubtitle{Регрессия аффинной функции}
+  \begin{columns}
 
+    \begin{column}{0.5\textwidth}
+      \begin{center}
+        \begin{tikzpicture}
+          \begin{axis}
+            \addplot[blue] table[x=X,y=Y,col sep=comma] {output.csv};
+            \addplot[blue,only marks,mark size=1] table[x=X,y=Ynoise,col
+            sep=comma] {output.csv};
+            \addplot[red] table[x=X,y=Ypred,col sep=comma] {output.csv};
+          \end{axis}
+        \end{tikzpicture}
+      \end{center}
+    \end{column}
+
+  \end{columns}
 \end{frame}
 
 \section{Введение}
