Don't confuse linear and affine
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -138,7 +138,7 @@
 \end{frame}
 
 \begin{frame}{\secname : \subsecname}
-  \framesubtitle{Регрессия аффинной функции}
+  \framesubtitle{Регрессия функции}
   \begin{columns}
 
     \begin{column}{0.5\textwidth}
