Add title for neuron slide
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -36,7 +36,8 @@
 
 \section{Модель нейрона}
 
-\begin{frame}
+\begin{frame}{\secname : \subsecname}
+  \framesubtitle{Сумматор}
   \begin{columns}
 
     \begin{column}{0.5\textwidth}
