--- a/lecture1.tex
+++ b/lecture1.tex
@@ -195,6 +195,39 @@
   \end{columns}
 \end{frame}
 
+\section{Регрессия произвольной функции}
+
+\begin{frame}{\secname : \subsecname}
+  \framesubtitle{Синус}
+  Проведем регрессию $\sin(x)$:
+
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      \begin{tikzpicture}[scale=\TikzScale]
+        \begin{axis}[title=Входной сигнал,xlabel=$x$,ylabel=$y$,legend
+          entries={Исходная функция,Исходная функция + шум,Предсказание модели}]
+          \addplot[blue] table[x=X,y=Y,col sep=comma]
+          {linear_regression_2/output.csv};
+          \addplot[blue,only marks,mark size=1] table[x=X,y=Ynoise,col
+          sep=comma] {linear_regression_2/output.csv};
+        \end{axis}
+      \end{tikzpicture}
+    \end{column}
+
+    \begin{column}{0.5\textwidth}
+      \begin{tikzpicture}[scale=\TikzScale]
+        \begin{axis}[title=Потери,xlabel=Эпоха,ylabel=MSE,ymode=log,legend
+          entries={Валидация,Обучение}]
+          \addplot[blue] table[col sep=comma]
+          {linear_regression_2/test_loss.csv};
+          \addplot[red] table[col sep=comma]
+          {linear_regression_2/train_loss.csv};
+        \end{axis}
+      \end{tikzpicture}
+    \end{column}
+  \end{columns}
+\end{frame}
+
 \section{Введение}
 
 \section{Перцептрон}
