Be verbose about function type
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -163,7 +163,7 @@
 \end{frame}
 
 \begin{frame}{\secname : \subsecname}
-  \framesubtitle{Регрессия функции}
+  \framesubtitle{Регрессия линейной функции}
   \begin{columns}
 
     \begin{column}{0.5\textwidth}
