Add title and author
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -4,6 +4,9 @@
 \mode<presentation>
 \usetheme{Ilmenau}
 
+\author{Василий Генералов \\ VSGeneralov@sberbank.ru}
+\title{Machine Learning 101}
+
 \usepackage[utf8]{inputenc}
 \usepackage[T1,T2A]{fontenc}
 \usepackage{hyperref}
@@ -44,6 +47,10 @@
 ]
 
 \begin{document}
+
+\begin{frame}
+  \maketitle
+\end{frame}
 
 \begin{frame}
   \tableofcontents
