Cover more activations
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -387,4 +387,19 @@
   \end{columns}
 \end{frame}
 
+\begin{frame}{\secname : \subsecname}
+  \framesubtitle{Другие функции активации}
+  \begin{itemize}
+    \item \textbf{Sigmoid}
+    \item \textbf{ReLU}
+    \item $\boldsymbol{\tanh}$
+    \item \textbf{GELU}
+    \item LogSigmoid
+    \item PReLU
+    \item LeakyReLU
+    \item больше в
+      \href{https://docs.pytorch.org/docs/stable/nn.html\#non-linear-activations-weighted-sum-nonlinearity}{документации}
+  \end{itemize}
+\end{frame}
+
 \end{document}
