Cover model learning
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -402,4 +402,15 @@
   \end{itemize}
 \end{frame}
 
+\section{Обучение}
+
+\begin{frame}{\secname : \subsecname}
+	\framesubtitle{Простейший цикл}
+	\inputminted[firstline=42,lastline=50]{python}{linear_regression_1/linear_regression_1.py}
+\end{frame}
+
+\begin{frame}{\secname : \subsecname}
+	\framesubtitle{Функция потерь}
+\end{frame}
+
 \end{document}
