--- a/lecture1.tex
+++ b/lecture1.tex
@@ -465,4 +465,29 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{\secname : \subsecname}
+  \framesubtitle{Минимизация значения функции}
+
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      \begin{tikzpicture}[scale=\TikzScale]
+        \begin{axis}[xlabel=$x$,ylabel=$y$]
+          \addplot[blue] table[x=X,y=P2d,col sep=comma]
+          {optimization_1/output.csv};
+          \node[draw=red,circle,fill=red] at (-5, 25) {};
+        \end{axis}
+      \end{tikzpicture}
+    \end{column}
+
+    \begin{column}{0.5\textwidth}
+      \begin{tikzpicture}[scale=\TikzScale]
+        \begin{axis}[xlabel=$x$,ylabel=$y$,zlabel=$z$]
+          \addplot3[surf,shader=interp,domain=-10:10] {x^2 + y^2};
+          \node[circle,draw=red,fill=red] at (-5, -5, 50) {};
+        \end{axis}
+      \end{tikzpicture}
+    \end{column}
+  \end{columns}
+\end{frame}
+
 \end{document}
