Add conclusion slides
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -513,4 +513,22 @@
   \href{https://habr.com/ru/articles/318970/}{статье}
 \end{frame}
 
+\section{Итог}
+
+\begin{frame}{\secname}
+  Для базового алгоритма машинного обучения достаточны:
+  \begin{itemize}
+    \item Линейный слой~--- простейший обучаемый блок нейросети
+    \item Активация~--- элемент, вносящий нелинейность
+    \item Функция потерь~--- зависимость, отражающая обученность модели
+    \item Оптимизатор~--- алгоритм обновления параметров
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Спасибо за внимание!
+  \end{center}
+\end{frame}
+
 \end{document}
