Amend slides with notes
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -107,6 +107,13 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Полносвязный слой, fully connected, linear}
+
+  \note{Если объединить два слоя нейронов и соединить каждый выход с
+    каждым входом, то получится линейный слой, также называемый
+    полносвязным. Количество нейронов в первом слое принято называть
+    шириной входа, а во втором~--- шириной выхода. Функцию линейного
+  слоя можно описать произведением матрицы весов на вектор входных параметров.}
+
   \begin{columns}
 
     \begin{column}{0.5\textwidth}
@@ -167,11 +174,25 @@
 
 \begin{frame}[fragile]{\secname : \subsecname}
   \framesubtitle{Описание модели}
+
+  \note{Очевидно, что использование фреймворка прячет от пользователя
+    львиную долю кода. Даже с учетом этого, простейшая модель занимает
+  3 строчки~--- конструктор и метод прямого прохода.}
+
   \inputminted[firstline=19,lastline=25]{python}{linear_regression_1/linear_regression_1.py}
 \end{frame}
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Регрессия линейной функции}
+
+  \note{Слева синим изображены исходная функция и легкий шум,
+    наложенный на ее значения. Красная линия~--- восстановленная
+    моделью зависимость. Как видно, в области значений, которые
+    <<видела>> модель, алгоритм неплохо приблизил функцию. График
+    справа показывает ошибку модели по мере работы алгоритма. В
+    машинном обучении <<эпохой>> принято называть одну итерацию цикла
+  <<оценка-ошибка-коррекция>>.}
+
   \begin{columns}
 
     \begin{column}{0.5\textwidth}
@@ -205,6 +226,15 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Регрессия произвольной функции}
+
+  \note{Имея на руках способ выучить закономерности из данных,
+    появляется желание исследовать что-то более сложное. Для примера
+    возьмем синус и как в прошлый раз добавим шум. На правом графике
+    видно, как ошибка не может стабилизироваться, да и предсказание
+    модели напоминает синус очень слабо. Эта картина не изменится ни от
+    большего количества слоев, ни от дополнительных параметров, ни от
+    новых данных. Действительно, линейная модель может выучить только
+  линейный закон. Так что же делать с нелинейными данными?}
 
   \begin{columns}
     \begin{column}{0.5\textwidth}
@@ -240,6 +270,10 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Активация}
+
+  \note{Ответ прост~--- нелинейность привносит активация. Для начала
+  положим, что существует функция $g$, принимающая результат работы нейрона.}
+
   Нелинейность в модель добавляет функция активации
 
   \begin{columns}
@@ -289,11 +323,19 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Описание модели}
+
+  \note{Не будем откладывать и добавим функцию активации~---
+  сигмоиду~--- между линейными слоями.}
+
   \inputminted[firstline=19,lastline=30]{python}{linear_regression_3/linear_regression_3.py}
 \end{frame}
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Регрессия произвольной функции}
+
+  \note{Картина далека от идеала, и модель можно обучать дальше, но
+    результат принципиально лучше простой линии, что видно по выходящим
+  на плато графикам потерь.}
 
   \begin{columns}
     \begin{column}{0.5\textwidth}
@@ -329,6 +371,12 @@
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Sigmoid, ReLU}
 
+  \note{Рассмотрим активации ближе. На слайде показаны две самые
+    популярные из них~--- сигмоида и rectified linear unit. Первую
+    применяют для бинарной классификации, ее значение лежит в пределах
+    от 0 до 1, а это готовая вероятность. ReLU можно часто встретить в
+  сверточных сетях.}
+
   \begin{columns}
 
     \begin{column}{0.5\textwidth}
@@ -358,11 +406,19 @@
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{$\tanh$, GELU}
 
+  \note{Еще один вариант~--- гиперболический тангенс, он был применен
+    в одной из первых сверточных сетей для распознавания рукописных
+    цифр (LeNet, 1988). Последняя функция~--- GELU, она учитывает не
+    только значения входа, но и статистику через $\Phi(x)$~---
+    кумулятивную функцию распределения. Значение $\Phi(x)$ равняется
+    вероятности, с которой случайная величина из нормального
+  распределения меньше либо равна $x$.}
+
   \begin{columns}
 
     \begin{column}{0.5\textwidth}
       \begin{tikzpicture}[scale=\TikzScale]
-        \begin{axis}[title=Sigmoid,xlabel=$x$,ylabel=$g$,legend
+        \begin{axis}[title=$\tanh$,xlabel=$x$,ylabel=$g$,legend
           entries={$\tanh(x)$},legend pos=north west]
           \addplot[blue] table[x=X,y=tanh,col sep=comma]
           {activation/output.csv};
@@ -385,6 +441,10 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Другие функции активации}
+
+  \note{Мы рассмотрели сигмоиду, ReLU, гиперболический тангенс, GELU.
+  Другие функции можно найти в документации фреймворка PyTorch.}
+
   \begin{itemize}
     \item \textbf{Sigmoid}
     \item \textbf{ReLU}
@@ -402,6 +462,13 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Простейший цикл}
+
+  \note{Цикл обучения уже был вскользь упомянут. Здесь мы выбираем
+    функцию потерь и оптимизатор, речь о которых пойдет позже. В цикле
+    мы делаем прямой проход модели, а затем оцениваем, насколько
+    результаты далеки от правды. После чего на основе оценки обновляем
+  обучаемые параметры.}
+
   \inputminted[firstline=42,lastline=50]{python}{linear_regression_1/linear_regression_1.py}
 \end{frame}
 
@@ -431,6 +498,12 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Cross Entropy, BCE}
+
+  \note{Потери при классификации на несколько классов можно оценить с
+    помощью cross entropy, дробь под логарифмом~--- вероятность от 0 до
+    1, что данные относятся к $i$-му классу. Для бинарной классификации
+  удобен частный случай~--- binary cross entropy.}
+
   В задачах классификации применяется Cross Entropy Loss:
   $$
   CrossEntropyLoss = -\sum_{i}^{c} y^{\ell}_i \cdot \log\frac{e^{y_{i}}}{
@@ -445,6 +518,11 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Другие функции потерь}
+
+  \note{Функция потерь отражает обученность модели, желательно, чтобы
+    она включала какую-то метрику реального применения модели, но это
+  не всегда так. Больше по ссылке.}
+
   \begin{itemize}
     \item \textbf{MSELoss}
     \item \textbf{L1Loss}
@@ -460,6 +538,13 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Минимизация значения функции}
+
+  \note{Уже упомянуто, что цель обучения~--- минимизация функции
+    потерь. Как это сделать? Если представить точку на параболе, то в
+    крайнем случае можно подвинуть ее влево или вправо, оценить новое
+    значение и выбрать, в каком направлении функция уменьшается. А
+    куда двигать точку на рисунке справа? Направлений движения
+  бесконечно много, и простого перебора недостаточно. Как же искать минимум?}
 
   \begin{columns}
     \begin{column}{0.5\textwidth}
@@ -485,6 +570,15 @@
 
 \begin{frame}{\secname : \subsecname}
   \framesubtitle{Градиент}
+
+  \note{Вспомним определение градиента. Это вектор, указывающий
+    направление наискорейшего роста функции. Давайте двигаться в
+    противоположную сторону! При этом движение может <<перескочить>>
+    минимум, чтобы этого не происходило, вводится параметр $\eta$~---
+    скорость обучения, как правило, он достаточно мал. Градиентный
+    поиск может найти как глобальный, так и локальный минимум, известны
+  более эффективные модификации.}
+
   Для задачи минимизации:
   $$
   \argmin_{\mtx{W}}\Loss\left(\mtx{X},\mtx{W}\right)
@@ -519,9 +613,11 @@
   Для базового алгоритма машинного обучения достаточны:
   \begin{itemize}
     \item Линейный слой~--- простейший обучаемый блок нейросети
-    \item Активация~--- элемент, вносящий нелинейность
-    \item Функция потерь~--- зависимость, отражающая обученность модели
-    \item Оптимизатор~--- алгоритм обновления параметров
+    \item Активация~--- элемент, вносящий нелинейность (Sigmoid,
+      ReLU, $\tanh$, GELU)
+    \item Функция потерь~--- зависимость, отражающая обученность
+      модели (MSE, L1, CE, BCE)
+    \item Оптимизатор~--- алгоритм обновления параметров (SGD)
   \end{itemize}
 \end{frame}
 
