Correct some notes
Signed-off-by: Vasilii Generalov <vasilii.generalov@yandex.ru>

--- a/lecture1.tex
+++ b/lecture1.tex
@@ -407,8 +407,8 @@
   \framesubtitle{$\tanh$, GELU}
 
   \note{Еще один вариант~--- гиперболический тангенс, он был применен
-    в одной из первых сверточных сетей для распознавания рукописных
-    цифр (LeNet, 1988). Последняя функция~--- GELU, она учитывает не
+    в одной из первых сверточных сетей. Последняя функция~--- GELU,
+    она учитывает не
     только значения входа, но и статистику через $\Phi(x)$~---
     кумулятивную функцию распределения. Значение $\Phi(x)$ равняется
     вероятности, с которой случайная величина из нормального
@@ -573,11 +573,13 @@
   \framesubtitle{Градиент}
 
   \note{Вспомним определение градиента. Это вектор, указывающий
-    направление наискорейшего роста функции. Давайте двигаться в
-    противоположную сторону! При этом движение может <<перескочить>>
-    минимум, чтобы этого не происходило, вводится параметр $\eta$~---
+    направление наискорейшего роста функции. Логично, что для
+    уменьшения значения следует двигаться в
+    противоположную сторону. Однако, есть шанс <<перескочить>>
+    минимум, и чтобы этого не происходило, вводится параметр $\eta$~---
     скорость обучения, как правило, он достаточно мал. Градиентный
-    поиск может найти как глобальный, так и локальный минимум, известны
+    поиск может найти как глобальный, так и локальный минимум, и для
+    улучшения результатов известны
   более эффективные модификации.}
 
   Для задачи минимизации:
